Updated to Xtext 2.4.3